# WakeWordDetector

./: .gitignore  README.md  cut_audio.py  main.py  model.py  pyproject.toml  record_background.py  record_wakeword.py  test.py
Augment/: augment_config.py  augment_pipeline.py  log_mel.py
Training/: Dataset.py  cut_audio.py  training.py
