[project]
name = "wakeworddetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "datasets>=5.0.0",
    "ffmpeg>=1.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "triton-xpu",
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }
triton-xpu = { index = "pytorch-xpu" }